--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "flowbite": "^1.6.4",
     "flowbite-react": "^0.4.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-gif-player": "^0.4.2",
     "react-icons": "^4.8.0",
