--- a/surakshak/android/app/src/main/AndroidManifest.xml
+++ b/surakshak/android/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
    <application
         android:label="surakshak"
         android:name="${applicationName}"
+        android:usesCleartextTraffic="true"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
