--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.5",
+    "firebase": "^9.19.1",
     "flowbite": "^1.6.4",
     "flowbite-react": "^0.4.2",
     "moment": "^2.29.4",
