--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2",
     "node-cron": "^3.0.2",
+    "nodemailer": "^6.9.15",
     "puppeteer": "^19.8.2",
     "puppeteer-extra": "^3.3.6",
     "twilio": "^4.9.0",
