--- a/surakshak/pubspec.yaml
+++ b/surakshak/pubspec.yaml
@@ -39,12 +39,12 @@ dependencies:
   
   google_fonts: ^4.0.3
   get_storage: ^2.1.1
-  flutter_fast_forms: ^10.0.0
+  # flutter_fast_forms: ^17.1.1
   convex_bottom_bar: ^3.0.0
   lottie: ^2.3.1
   image_picker: ^0.8.7+1
   styled_widget: ^0.4.1
-  intl: ^0.18.0
+  intl: ^0.19.0
   http_parser: ^4.0.2
   url_launcher: ^6.1.10
   number_inc_dec: ^0.8.0
